--- a/install
+++ b/install
@@ -1,2 +1,6 @@
 #!/bin/sh
+mkdir ~/.vim/swap
+mkdir ~/.vim/swp
+mkdir ~/.vim/backup
+mkdir ~/.vim/undo
 curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
