--- a/install
+++ b/install
@@ -3,4 +3,10 @@ mkdir ~/.vim/swap
 mkdir ~/.vim/swp
 mkdir ~/.vim/backup
 mkdir ~/.vim/undo
+echo 'Vim directories created!'
+
+ln ~/.vimrc ~/.config/vim-config/vimrc
+
 curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+echo 'Plug.vim installed!'
+echo 'Open vim and execute :PlugInstall'
