--- a/install
+++ b/install
@@ -5,7 +5,7 @@ mkdir ~/.vim/backup
 mkdir ~/.vim/undo
 echo 'Vim directories created!'
 
-ln ~/.vimrc ~/.config/vim-config/vimrc
+ln ~/.config/vim-config/vimrc ~/.vimrc
 
 curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 echo 'Plug.vim installed!'
