--- a/install
+++ b/install
@@ -1,8 +1,9 @@
 #!/bin/sh
-mkdir ~/.vim/swap
-mkdir ~/.vim/swp
-mkdir ~/.vim/backup
-mkdir ~/.vim/undo
+mkdir -p ~/.vim
+mkdir -p ~/.vim/swap
+mkdir -p ~/.vim/swp
+mkdir -p ~/.vim/backup
+mkdir -p ~/.vim/undo
 echo 'Vim directories created!'
 
 ln ~/.config/vim-config/vimrc ~/.vimrc
